[package]
name = "schema-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
psl.workspace = true
quaint = { workspace = true, features = ["pooled"], optional = true }
serde.workspace = true
serde_json.workspace = true
user-facing-errors = { path = "../../../libs/user-facing-errors" }

chrono.workspace = true
enumflags2.workspace = true
sha2 = "0.9.1"
tracing.workspace = true
tracing-error = "0.2"

[features]
quaint = ["dep:quaint"]
mssql = ["user-facing-errors/mssql-native", "quaint"]
mysql = ["user-facing-errors/mysql-native", "quaint"]
postgresql = ["user-facing-errors/postgresql-native", "quaint"]
sqlite = ["user-facing-errors/sqlite-native", "quaint"]
