[package]
edition = "2021"
name = "sql-schema-connector"
version = "0.1.0"

[features]
vendored-openssl = ["quaint/vendored-openssl"]
mssql = ["schema-connector/mssql", "sql-schema-describer/mssql", "sql-ddl/mssql", "user-facing-errors/mssql"]
mysql = ["schema-connector/mysql", "sql-schema-describer/mysql", "sql-ddl/mysql", "user-facing-errors/mysql"]
postgresql = ["schema-connector/postgresql", "sql-schema-describer/postgresql", "sql-ddl/postgres", "user-facing-errors/postgresql"]
sqlite = ["schema-connector/sqlite", "sql-schema-describer/sqlite", "sql-ddl/sqlite", "user-facing-errors/sqlite"]

[dependencies]
psl.workspace = true
quaint = { workspace = true, features = [
    "native",
    "expose-drivers",
    "pooled",
    "fmt-sql",
] }
tokio.workspace = true
serde.workspace = true
indoc.workspace = true
uuid.workspace = true

prisma-value = { path = "../../../libs/prisma-value" }
schema-connector = { path = "../schema-connector" }
sql-schema-describer = { path = "../../sql-schema-describer" }
datamodel-renderer = { path = "../../datamodel-renderer" }
sql-ddl = { path = "../../../libs/sql-ddl" }
user-facing-errors = { path = "../../../libs/user-facing-errors" }

chrono.workspace = true
connection-string.workspace = true
enumflags2.workspace = true
once_cell = "1.3"
regex = "1"
serde_json.workspace = true
tracing.workspace = true
tracing-futures = "0.2"
url.workspace = true
either = "1.6"
sqlformat = "0.2.1"
sqlparser = "0.32.0"
versions = "6.1.0"
